--- a/packages/vault-config/compositions/post-config/test/scenarios/standard/claim.yaml
+++ b/packages/vault-config/compositions/post-config/test/scenarios/standard/claim.yaml
@@ -10,14 +10,14 @@ spec:
     adminPolicyName: "vault-admin"
     readKvSecretsPolicyName: "read-all-kv-secrets"
     aws:
-      dnsBackend:
-        enabled: true
-        path: "aws/dns"
-        accessRole: "vault-dns-access"
-        cloudRole: "arn:aws:iam::123456789012:role/external-dns-role"
       objectStorageBackend:
         enabled: true
         path: "aws/object-storage"
+        accessRole: "vault-object-storage-access"
+        cloudRole: "arn:aws:iam::123456789012:role/object-storage-role"
+      dnsBackend:
+        enabled: true
+        path: "aws/dns"
         accessRole: "vault-object-storage-access"
         externalDnsRole: "arn:aws:iam::123456789012:role/external-dns-role"
         certManagerAccessRole: "vault-cert-manager-access"
