--- a/packages/vault-config/compositions/post-config/test/providers.yaml
+++ b/packages/vault-config/compositions/post-config/test/providers.yaml
@@ -5,3 +5,11 @@ metadata:
   name: provider-vault
 spec:
   package: xpkg.upbound.io/upbound/provider-vault:v2
+
+---
+apiVersion: pkg.crossplane.io/v1
+kind: Provider
+metadata:
+  name: provider-kubernetes
+spec:
+  package: xpkg.upbound.io/crossplane-contrib/provider-kubernetes:v0.18.0
