fix: secret kcl

--- a/packages/vault-config/compositions/post-config/test/scenarios/standard/claim.yaml
+++ b/packages/vault-config/compositions/post-config/test/scenarios/standard/claim.yaml
@@ -33,3 +33,4 @@ spec:
   managementPolicies:
     - "*"
 
+{"cloud_platform_api_client_id": "Y2xvdWRfcGxhdGZvcm1fYXBpX2NsaWVudF9pZA==", "cloud_platform_api_client_secret": "Y2xvdWRfcGxhdGZvcm1fYXBpX2NsaWVudF9zZWNyZXQ="}
