--- a/packages/zitadel-config/configuration/crossplane.yaml
+++ b/packages/zitadel-config/configuration/crossplane.yaml
@@ -2,11 +2,11 @@
 apiVersion: meta.pkg.crossplane.io/v1alpha1
 kind: Configuration
 metadata:
-  name: argocd-config
+  name: zitadel-config
 spec:
   dependsOn:
-    - provider: ghcr.io/infitx-org/zitadel-crossplane-provider
-      version: ">=v0.0.1-rc00"
+    - provider: xpkg.upbound.io/crossplane-contrib/provider-kubernetes
+      version: ">=v0.14.1"
     ## Functions
     - provider: xpkg.upbound.io/crossplane-contrib/function-kcl
       version: ">=v0.9.0"
