--- a/packages/argocd-config/compositions/oidc/test/scenarios/standard/observed.yaml
+++ b/packages/argocd-config/compositions/oidc/test/scenarios/standard/observed.yaml
@@ -44,3 +44,17 @@ metadata:
 status:
   atProvider:
     roleKey: "argocd_users"
+---
+apiVersion: kubernetes.crossplane.io/v1alpha2
+kind: Object
+metadata:
+  annotations:
+    crossplane.io/composition-resource-name: zitadel-ahuid-observe-secret
+status:
+  atProvider:
+    manifest:
+      apiVersion: v1
+      kind: Secret
+      data:
+        zitadel_admin_human_user_id: "123456789"
+---
