--- a/packages/argocd-config/compositions/oidc/test/scenarios/standard/observed.yaml
+++ b/packages/argocd-config/compositions/oidc/test/scenarios/standard/observed.yaml
@@ -1,12 +1,14 @@
----
-apiVersion: zitadel.zitadel.crossplane.io/v1alpha1
-kind: Org
+apiVersion: kubernetes.crossplane.io/v1alpha2
+kind: Object
 metadata:
   annotations:
-    crossplane.io/composition-resource-name: zitadel-orgs
+    crossplane.io/composition-resource-name: zitadel-org-id-secret-observe
 status:
   atProvider:
-    id: "191738205156974598"
+    manifest:
+      apiVersion: v1
+      data:
+        zitadel_org_id: "191738205156974598"
 ---
 apiVersion: zitadel.zitadel.crossplane.io/v1alpha1
 kind: Project
