fix: missing base64 in grant for user

--- a/packages/argocd-config/compositions/oidc/test/scenarios/standard/observed.yaml
+++ b/packages/argocd-config/compositions/oidc/test/scenarios/standard/observed.yaml
@@ -58,5 +58,5 @@ status:
       apiVersion: v1
       kind: Secret
       data:
-        zitadel_admin_human_user_id: "123456789"
+        zitadel_admin_human_user_id: "MTIzNDU2Nzg5MA=="
 ---
