--- a/packages/gitlab/compositions/oidc/test/scenarios/standard/claim.yaml
+++ b/packages/gitlab/compositions/oidc/test/scenarios/standard/claim.yaml
@@ -12,8 +12,11 @@ spec:
 
     # Optional parameters with defaults
     adminRbacGroup: "gitlab_administrators"  # Default value
+    maintainerRbacGroup: "gitlab_maintainers"  # Default value
     userRbacGroup: "gitlab_users"  # Default value
     oidcSecretName: "gitlab-oidc-secret"  # Default value
+    oidcProviderGroupClaimPrefix: "gitlab"  # Default value
+
 
   providerConfigsRef:
     zitadelProviderName: "zitadel-provider"
