fix: zitadel human user id ref

--- a/packages/gitlab/compositions/oidc/resources/definition.yaml
+++ b/packages/gitlab/compositions/oidc/resources/definition.yaml
@@ -66,7 +66,7 @@ spec:
                   - adminRbacGroup
                   - maintainerRbacGroup
                   - userRbacGroup
-                  - zitadelAdminHumanUserId
+                  - zitadelAdminHumanUserIdRef
                 properties:
                   gitlabFqdn:
                     type: string
@@ -97,10 +97,27 @@ spec:
                     description: |-
                       Name of OIDC secret for clientid/secret
                     default: "gitlab-oidc-secret"
-                  zitadelAdminHumanUserId:
-                    type: string
+                  zitadelAdminHumanUserIdRef:
+                    type: object
                     description: |-
                       Admin Zitadel human user ID
+                    required:
+                      - name
+                      - namespace
+                    properties:
+                      name:
+                        type: string
+                        description: |-
+                          Name of the secret to observe
+                      namespace:
+                        type: string
+                        description: |-
+                          Namespace of the secret to observe
+                      key:
+                        type: string
+                        description: |-
+                          Key of the secret to observe
+                        default: "zitadel_admin_human_user_id"
                   oidcProviderGroupClaimPrefix:
                     type: string
                     description: |-
