--- a/packages/grafana-config/compositions/oidc/resources/definition.yaml
+++ b/packages/grafana-config/compositions/oidc/resources/definition.yaml
@@ -117,4 +117,4 @@ spec:
                     type: string
                     description: |-
                       Prefix for group claim in OIDC provider
-                    default: "grafana"
+                    default: "zitadel:grants"
