--- a/packages/gitlab/compositions/oidc/resources/definition.yaml
+++ b/packages/gitlab/compositions/oidc/resources/definition.yaml
@@ -122,4 +122,4 @@ spec:
                     type: string
                     description: |-
                       Prefix for group claim in OIDC provider
-                    default: "gitlab"
+                    default: "zitadel:grants"
