fix: missing organizationIdSecretRef

--- a/packages/gitlab/compositions/oidc/test/scenarios/standard/claim.yaml
+++ b/packages/gitlab/compositions/oidc/test/scenarios/standard/claim.yaml
@@ -20,6 +20,11 @@ spec:
     oidcSecretName: "gitlab-oidc-secret"  # Default value
     oidcProviderGroupClaimPrefix: "zitadel:grants"  # Default value
 
+    organizationIdSecretRef:
+      name: zitadel-org-id
+      namespace: zitadel
+      key: zitadel_org_id
+
 
   providerConfigsRef:
     zitadelProviderName: "zitadel-provider"
