--- a/packages/gitlab/compositions/oidc/resources/definition.yaml
+++ b/packages/gitlab/compositions/oidc/resources/definition.yaml
@@ -123,3 +123,27 @@ spec:
                     description: |-
                       Prefix for group claim in OIDC provider
                     default: "zitadel:grants"
+                  organizationIdSecretRef:
+                    type: object
+                    description: |-
+                      Organization ID secret
+                    default:
+                      name: "zitadel-post-config-init-output"
+                      namespace: "zitadel"
+                      key: "zitadel_org_id"
+                    properties:
+                      name:
+                        type: string
+                        description: |-
+                          Name of the secret to observe
+                        default: "zitadel-post-config-init-output"
+                      namespace:
+                        type: string
+                        description: |-
+                          Namespace of the secret to observe
+                        default: "zitadel"
+                      key:
+                        type: string
+                        description: |-
+                          Key of the secret to observe
+                        default: "zitadel_org_id"
