--- a/packages/argocd-config/configuration/crossplane.yaml
+++ b/packages/argocd-config/configuration/crossplane.yaml
@@ -7,6 +7,8 @@ spec:
   dependsOn:
     - provider: ghcr.io/infitx-org/zitadel-crossplane-provider
       version: ">=v0.0.1-rc00"
+    - provider: xpkg.upbound.io/crossplane-contrib/provider-kubernetes
+      version: ">=v0.18.0"
     ## Functions
     - provider: xpkg.upbound.io/crossplane-contrib/function-kcl
       version: ">=v0.9.0"
