feat: update zitadel provider reference

--- a/packages/grafana-config/compositions/oidc/test/providers.yaml
+++ b/packages/grafana-config/compositions/oidc/test/providers.yaml
@@ -11,7 +11,7 @@ kind: Provider
 metadata:
   name: provider-zitadel
 spec:
-  package: ghcr.io/infitx-org/zitadel-crossplane-provider:v0.0.1-rc01
+  package: ghcr.io/infitx-org/zitadel-crossplane-provider:v0.0.1
 ---
 apiVersion: pkg.crossplane.io/v1
 kind: Provider
