--- a/packages/argocd-config/compositions/oidc/test/providers.yaml
+++ b/packages/argocd-config/compositions/oidc/test/providers.yaml
@@ -4,7 +4,7 @@ kind: Provider
 metadata:
   name: provider-zitadel
 spec:
-  package: ghcr.io/infitx-org/zitadel-crossplane-provider:v0.0.1-rc01
+  package: ghcr.io/infitx-org/zitadel-crossplane-provider:v0.0.1
 ---
 apiVersion: pkg.crossplane.io/v1
 kind: Provider
